* pheno:   added death anim and medic call to playdead command
* pheno:   fixed server crash when calling shrubbot command with [i] shortcut
           at server console
* pheno:   added g_slashKill flag 8 - disable /kill when player is frozen
* pheno:   a frozen player cannot switch teams for now
* pheno:   Lua API: fixed a bug where gclient entity fields are not available
           on et_ClientConnect() callback
* pheno:   fixed broken FF voting
* pheno:   Lua API: load API from external library
* pheno:   fixed !rename if player has reached max name changes
* pheno:   added support for ETPro's delete mapscript command
* pheno:   fixed delete mapscript command causes server crashes
* pheno:   added g_ettvFlags bitflag cvar (see docs)
* pheno:   Lua API: added redeye's et.ClientNumberFromString() library call
* pheno:   reworked inactivity code and renamed g_shrubbotOptions bitflag
           cvar to g_inactivityOptions (see docs)
* pheno:   firstblood message - added configurable message and position
* pheno:   added lastblood message
* pheno:   fixed g_teamDamageRestriction won't kick players bug
* pheno:   fixed wrong GUID in !listplayers output when following an bot
* pheno:   fixed no inactivity moving if g_inactivityOptions flag 2 was set
* pheno:   added shrubbot flag '&' - can rename himself regardless of
           g_maxNameChanges limit (see docs)
* pheno:   fixed kick callvote won't kick players bug
* pheno:   Lua API: added IlDuca's and core's Lua API additions -
           et.G_EntitiesFree(), et.G_GetSpawnVar() and et.G_SetSpawnVar()
* pheno:   added core's fix for airstrike-cans getting kicked after plane
           knows its targets
* pheno:   added g_mode bitflag cvar (see docs)
* pheno:   added etpub_version console command
* pheno:   added redeye's XP overflow fix
* pheno:   added logout referee command
* cs:      added Omni-bot 0.8 support
* pheno:   added core's mapvote fix. Thanks to NQ team.