@@ -2102,3 +2102,4 @@
 * pheno:   added logout referee command
 * cs:      added Omni-bot 0.8 support
 * pheno:   added core's mapvote fix. Thanks to NQ team.
+* pheno:   fixed resetting *war modes on map changes
